[package]
name = "dicediele"
version = "0.0.1"
edition = "2021"
description = "A Rust program for rolling dice and calculating various dice-related probabilities to assist tRPG players and DMs in making appropriate decisions."
keywords = ["dice", "rng", "rpg"]
documentation = "https://dieeisdiele.github.io/dicediele/"
authors = ["Tom Su"]
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
eframe = "*"
lazy_static = "*"
rand = "*"
regex = "*"
